Wraps all main questions in their own container div

--- a/templates/syfosoknader/partials/style.hbs
+++ b/templates/syfosoknader/partials/style.hbs
@@ -121,6 +121,10 @@
         padding-bottom: 0.5cm;
     }
 
+    .hovedsporsmal {
+        page-break-inside: avoid;
+    }
+
     .sporsmalstekst {
         font-weight: bold;
     }
