--- a/templates/syfosoknader/partials/style.hbs
+++ b/templates/syfosoknader/partials/style.hbs
@@ -2,6 +2,18 @@
     @page {
         size: A4 portrait;
         margin: 0.2cm;
+        padding-top: 1cm;
+
+        @bottom-left {
+            content: element(footer);
+        }
+    }
+
+    @page:first {
+        padding-top: 0;
+        @top-left {
+            content: element(header);
+        }
     }
 
     * {
@@ -15,20 +27,43 @@
     h1 {
         font-weight: 700;
         font-style: normal;
-        font-size: 18px;
+        font-size: 20px;
         font-family: "Source Sans Pro";
     }
 
     p {
         margin: 3px;
-        font-size: 12px;
+        font-size: 14px;
         font-family: "Source Sans Pro";
+    }
+
+    #footer {
+        position: running(footer);
+        font-size: 12px;
+        margin: -20px 0.7cm 0;
+    }
+
+    .sidetall {
+        float: right;
+    }
+
+    #pagenumber:before {
+        content: counter(page);
+    }
+
+    #pagecount:before {
+        content: counter(pages)
+    }
+
+    #header {
+        background: #C2EAF7;
+        padding: 0cm 0.7cm;
     }
 
     .title {
         display: inline-block;
         position: absolute;
-        top: 15px;
+        top: 12px;
         left: 100px;
     }
 
@@ -40,10 +75,7 @@
         width: 48px;
     }
 
-    .header {
-        background: #C2EAF7;
-        padding: 0cm 0.7cm;
-    }
+
 
     .container {
         margin: 0cm 0.7cm;
@@ -57,7 +89,7 @@
 
     .navn {
         font-weight: bold;
-        font-size: 14px;
+        font-size: 16px;
         width: 350px;
     }
 
@@ -74,13 +106,13 @@
 
     .persontekst {
         display: inline-block;
+        width: 667px;
     }
 
     .sendt {
-        position: absolute;
-        right: 2cm;
-        font-size: 10px;
-        width: 250px;
+        float: right;
+        width: 145px;
+        font-size: 14px;
     }
 
     .sporsmalcontainer {
@@ -96,12 +128,12 @@
     .svar {
         margin-top: 4px;
         width: 650px;
-        font-size: 12px;
+        font-size: 14px;
         font-family: "Source Sans Pro";
     }
 
     .svar--perioder {
-        font-size: 16px;
+        font-size: 18px;
         font-weight: bold;
         margin-left: 3px;
 
@@ -114,7 +146,7 @@
     .checkbox {
         vertical-align: top;
         width: 13px;
-        margin: -1px 5px 0px 1px;
+        margin: -3px 5px 0px 1px;
     }
 
     .sporsmal {
@@ -129,18 +161,9 @@
         font-weight: bold;
     }
 
-    .footer {
-        display: block;
-        position: absolute;
-        top: 24.5cm;
-        left: 0.9cm;
-        font-size: 10px;
-        width: 680px;
-    }
-
     .sporsmal ul {
         font-family: "Source Sans Pro";
-        font-size: 12px;
+        font-size: 14px;
     }
 
     .sporsmal ul li {
