--- a/templates/syfosoknader/partials/style.hbs
+++ b/templates/syfosoknader/partials/style.hbs
@@ -32,7 +32,8 @@
     }
 
     p {
-        margin: 3px;
+        margin-top: 3px;
+        margin-bottom: 3px;
         font-size: 14px;
         font-family: "Source Sans Pro";
     }
@@ -58,6 +59,15 @@
     #header {
         background: #C2EAF7;
         padding: 0cm 0.7cm;
+    }
+
+    h3 {
+        font-weight: 700;
+        font-style: normal;
+        font-size: 13px;
+        font-family: "Source Sans Pro";
+        margin-top: 5px;
+        margin-bottom: 5px;
     }
 
     .title {
@@ -127,7 +137,7 @@
 
     .svar {
         margin-top: 4px;
-        width: 650px;
+        width: 90%;
         font-size: 14px;
         font-family: "Source Sans Pro";
     }
@@ -149,12 +159,16 @@
         margin: -3px 5px 0px 1px;
     }
 
-    .sporsmal {
-        padding-bottom: 0.5cm;
-    }
-
     .hovedsporsmal {
         page-break-inside: avoid;
+    }
+
+    .oppsummering__seksjon {
+        page-break-inside: avoid;
+    }
+
+    .sporsmal .sporsmal {
+        margin-left: 10px
     }
 
     .sporsmalstekst {
@@ -170,4 +184,102 @@
         margin-bottom: 12px;
     }
 
+    .oppsummering__seksjon {
+        border-bottom: 1px solid gray;
+        margin-bottom: 1em;
+        padding-bottom: 1em;
+    }
+
+    .oppsummering__seksjon:last-child {
+        border-bottom-width: 0;
+        margin-bottom: 0;
+        padding-bottom: 0;
+    }
+
+    .oppsummering__sporsmalscontainer {
+        margin-bottom: 0.75em;
+    }
+
+    .oppsummering__sporsmalscontainer:last-child {
+         margin-bottom: 0;
+     }
+
+    .oppsummering__sporsmal {
+        margin-top: 0;
+        margin-bottom: .5em;
+    }
+
+    .oppsummering__avkrysset {
+    }
+
+    .oppsummering__avkrysset img {
+        width: 1em;
+        height: 1em;
+        margin-right: .25em;
+        margin-top: .175em;
+    }
+
+    .oppsummering__avkrysset span {
+        flex: 1;
+    }
+
+    .oppsummering__undersporsmal .oppsummering__undersporsmal {
+        padding-left: 1.0em;
+        margin-bottom: 1.0em;
+    }
+
+    .oppsummering__undersporsmal + .oppsummering__undersporsmal {
+        margin-top: 1.5em;
+    }
+
+    .oppsummering__tekst,
+    .oppsummering__dato {
+        margin-bottom: .5em;
+    }
+
+    .oppsummering__avkrysset + .oppsummering__tekstsvar,
+    .oppsummering__svarliste + .oppsummering__tekstsvar,
+    .oppsummering__avkrysset + .oppsummering__undersporsmalsliste,
+    .oppsummering__tekstsvar + .oppsummering__tekstsvar {
+        padding-left: 1.0em;
+    }
+
+    .oppsummering__svarliste:last-child .oppsummering__undersporsmalsliste {
+        margin-bottom: 0;
+    }
+
+    .oppsummering__svarliste + .oppsummering__svarliste {
+        margin-top: 1em;
+    }
+
+    .oppsummering__undersporsmalsliste {
+        margin-top: 0.5em;
+    }
+
+    .oppsummering__avkrysset + .oppsummering__undersporsmalsliste {
+        margin-bottom: 0.5em;
+        margin-top: 0.5em;
+    }
+
+    .oppsummering__avkrysset + .oppsummering__undersporsmalsliste > .oppsummering__tekstsvar:first-child {
+        margin-top: -1em;
+    }
+
+    .oppsummering__avkrysset + .oppsummering__undersporsmalsliste > .oppsummering__tekstsvar {
+        padding-left: 0;
+    }
+
+    .oppsummering__tekstsvar + .oppsummering__sporsmalscontainer {
+        margin-top: 1em;
+    }
+
+    .oppsummering__dato {
+        margin-bottom: 0;
+    }
+    .oppsummering__dato:before {
+         content: "\2022";
+         display: inline-block;
+         width: .5em;
+         margin-right: .5em;
+     }
 </style>
