Uses h3 for question headers, minor changes to style

--- a/templates/syfosoknader/partials/spmpartial.hbs
+++ b/templates/syfosoknader/partials/spmpartial.hbs
@@ -19,9 +19,9 @@
 {{/eq}}
 
 {{#eq svartype "DATO"}}
-    <p class="sporsmalstekst">
+    <h3 class="sporsmalstekst">
         {{ sporsmalstekst }}
-    </p>
+    </h3>
     {{#if undertekst}}
         <p class="undertekst">
             {{ undertekst }}
@@ -58,9 +58,9 @@
 {{/eq}}
 
 {{#eq svartype "PERIODER"}}
-    <p class="sporsmalstekst">
+    <h3 class="sporsmalstekst">
         {{ sporsmalstekst }}
-    </p>
+    </h3>
     {{#if undertekst}}
         <p class="undertekst">
             {{ undertekst }}
@@ -82,9 +82,9 @@
 {{/eq}}
 
 {{#eq svartype "FRITEKST"}}
-    <p class="sporsmalstekst">
+    <h3 class="sporsmalstekst">
         {{ sporsmalstekst }}
-    </p>
+    </h3>
     {{#if undertekst}}
         <p class="undertekst">
             {{ undertekst }}
