--- a/templates/syfosoknader/partials/style.hbs
+++ b/templates/syfosoknader/partials/style.hbs
@@ -21,7 +21,7 @@
     }
 
     img {
-        image-rendering: pixelated;
+        image-rendering: pixelated; /* Required for PDF/A-compliance */
     }
 
     h1 {
@@ -64,7 +64,7 @@
     h3 {
         font-weight: 700;
         font-style: normal;
-        font-size: 13px;
+        font-size: 14px;
         font-family: "Source Sans Pro";
         margin-top: 5px;
         margin-bottom: 5px;
@@ -84,8 +84,6 @@
         margin-left: 3px;
         width: 48px;
     }
-
-
 
     .container {
         margin: 0cm 0.7cm;
@@ -161,6 +159,7 @@
 
     .hovedsporsmal {
         page-break-inside: avoid;
+        margin-bottom: 1em;
     }
 
     .oppsummering__seksjon {
@@ -175,12 +174,12 @@
         font-weight: bold;
     }
 
-    .sporsmal ul {
+    .redaksjonelt-innhold ul {
         font-family: "Source Sans Pro";
         font-size: 14px;
     }
 
-    .sporsmal ul li {
+    .redaksjonelt-innhold ul li {
         margin-bottom: 12px;
     }
 
