Uses `iso_to_date` for date parsing in syfosoknader templates

--- a/templates/syfosoknader/sykepengerutland.hbs
+++ b/templates/syfosoknader/sykepengerutland.hbs
@@ -17,7 +17,7 @@
 
       <div class="persontekst">
           <p class="sendt">
-            Sendt til NAV {{ iso_to_nor_date innsendtDato }}
+            Sendt til NAV {{ iso_to_date innsendtDato }}
         </p>
         <p class="navn">
           {{ navn }}
