Need to use this. to pin the context in recursive template
using `this.` prevents the parents value from being hoisted if the child doesn't override the value

--- a/templates/syfosoknader/partials/spmpartial.hbs
+++ b/templates/syfosoknader/partials/spmpartial.hbs
@@ -142,9 +142,11 @@
 
 {{#eq svartype "IKKE_RELEVANT"}}
     <div>
-        <h3 class="sporsmalstekst">
-            {{ sporsmalstekst }}
-        </h3>
+        {{#if this.sporsmalstekst}}
+            <h3 class="sporsmalstekst">
+                {{ this.sporsmalstekst }}
+            </h3>
+        {{/if}}
         {{#if undertekst }}
             <div class="redaksjonelt-innhold">
                 {{safe undertekst}}
