Fjerner bruk av 'capitalize' for spørsmålstekst.
Spørsmål med to setninger fikk liten forbokstav i setning nr to

--- a/templates/syfosoknader/partials/spmpartial.hbs
+++ b/templates/syfosoknader/partials/spmpartial.hbs
@@ -4,7 +4,7 @@
             <div class="oppsummering__sporsmalscontainer">
                 <div class="oppsummering__avkrysset">
                     <img class="checkbox" src="{{ image "Checkboks.png" }}"/>
-                    <span class="svar svar--checkbox">{{ capitalize sporsmalstekst }}</span>
+                    <span class="svar svar--checkbox">{{ sporsmalstekst }}</span>
                 </div>
                 {{# if undersporsmal }}
                     <div class="oppsummering__undersporsmalsliste">
@@ -168,7 +168,7 @@
             <div class="oppsummering__sporsmalscontainer">
                 <div class="oppsummering__avkrysset">
                     <img class="checkbox" src="{{ image "Checkboks.png" }}"/>
-                    <span class="svar svar--checkbox">{{ capitalize sporsmalstekst }}</span>
+                    <span class="svar svar--checkbox">{{ sporsmalstekst }}</span>
                 </div>
                 {{# if undersporsmal }}
                     <div class="oppsummering__undersporsmalsliste">
