Uthever at en søknad er korrigert

--- a/templates/syfosoknader/partials/style.hbs
+++ b/templates/syfosoknader/partials/style.hbs
@@ -39,6 +39,11 @@
         font-family: "Source Sans Pro";
     }
 
+    p.korrigert {
+        color: #ba3a26;
+        font-weight: bold;
+    }
+
     #footer {
         position: running(footer);
         font-size: 12px;
