Update to openhtmltopdf RC16 and use ktor client for http requests in tests

--- a/templates/syfosoknader/selvstendignaeringsdrivende.hbs
+++ b/templates/syfosoknader/selvstendignaeringsdrivende.hbs
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <title>Søknad selvstendig næringsdrivende</title>
     {{#block 'syfosoknader/partials/style' }}
     {{/block}}
 </head>
