--- a/templates/pale/behandlingsvedlegg.hbs
+++ b/templates/pale/behandlingsvedlegg.hbs
@@ -2,6 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <title>Behandlingsvedlegg</title>
     <style>
         * {
             font-family: "Source Sans Pro" !important;
