--- a/templates/syfosoknader/sykepengerutland.hbs
+++ b/templates/syfosoknader/sykepengerutland.hbs
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
+    <title>Søknad sykepenger utland</title>
     {{#block 'syfosoknader/partials/style' }}
     {{/block}}
 </head>
