--- a/templates/syfosoknader/partials/style.hbs
+++ b/templates/syfosoknader/partials/style.hbs
@@ -44,6 +44,11 @@
         font-weight: bold;
     }
 
+    p.header__tittel {
+        margin-top: 10px;
+        font-weight: bold;
+    }
+
     #footer {
         position: running(footer);
         font-size: 12px;
@@ -109,6 +114,7 @@
 
     .id {
         width: 430px;
+        margin-bottom: 30px;
     }
 
     .personikon {
