--- a/templates/syfosoknader/partials/style.hbs
+++ b/templates/syfosoknader/partials/style.hbs
@@ -120,7 +120,7 @@
     .personikon {
         display: inline-block;
         width: 32px;
-        margin-right: 4px;
+        margin-right: 8px;
         margin-left: 3px;
     }
 
@@ -130,9 +130,19 @@
     }
 
     .sendt {
+        display: inline-block;
         float: right;
         width: 145px;
         font-size: 14px;
+    }
+
+    .persontekst__personalia {
+        display: inline-block;
+    }
+
+    .persontekst__sidetopp {
+        display: block;
+        margin-bottom: 32px;
     }
 
     .sporsmalcontainer {
