--- a/src/test/resources/helper_templates/contains.hbs
+++ b/src/test/resources/helper_templates/contains.hbs
@@ -1,1 +1,1 @@
-{{#contains list "fish"}}IT_CONTAINS{{else}}NO_CONTAINS{{/contains}}
+{{#contains_field list "fish"}}IT_CONTAINS{{else}}NO_CONTAINS{{/contains_field}}
